# fastapi-practice

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py
archt_pat_app/: config.py
archt_pat_app/adapter/: orm.py  repository.py
archt_pat_app/domain/: model.py
archt_pat_app/test/: conftest.py  test_allocate.py  test_batches.py  test_domain_model.py  test_orm.py  test_repository.py
asyncio_scraping/: .gitignore  config.py  requirements.txt
asyncio_scraping/app/: main.py
asyncio_scraping/app/models/: __init__.py  book.py
asyncio_scraping/app/templates/: index.html
asyncio_scraping/sample/: v1_scraping.py  v2_scraping.py
sql_app/: .gitignore  requirements.txt
